# gpsp-reload

./: .gitignore  AGENTS.md  E2E-TEST.md  LESSONS.md  Makefile  Makefile.common  PLAN.md  RV32_JIT_ROADMAP.md  TODO.md  bios_data.S  cheats.c  common.h  cpu.cc  cpu.h  cpu_backend.c  cpu_backend.h  cpu_threaded.c  gamepak_direct_mmap.h  gba_memory.c  gba_memory.h  gpsp_config.h  gpsp_libretro_emscripten.bc  jsjit_arm_codegen.js  jsjit_backend.c  jsjit_backend.h  jsjit_bridge.c  jsjit_bridge.h  jsjit_bridge_runtime.js  jsjit_common.js  jsjit_cpu_runtime.js  jsjit_runtime.js  jsjit_thumb_codegen.js  main.c  memmap.c  rfu.c  serial.c  serial_proto.c  sound.c  sound.h  video.cc
docs/: rv32im_backend_design.md
esp32s3/: CMakeLists.txt  E2E-TEST.md  ISA.md  PSRAM_STATIC_MIGRATION.md  analyze_map.py  cores3se_lcd.c  cores3se_lcd.h  flash_gba.sh  pc_sampler_highint5.S  psram_static.c  psram_static.h  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig.qemu.defaults  xtensa_codegen.h  xtensa_emit.h  xtensa_hle.h  xtensa_native_emit.h  xtensa_runtime.c  xtensa_state.h
esp32s3/main/: CMakeLists.txt  app_main.c
esp32s31/: CMakeLists.txt  README.md  benchmark_serial.py  flash_gba.sh  game_menu.c  game_menu.h  gamepad_serial.py  gamepak_container.c  gamepak_container.h  gamepak_runtime.c  gamepak_runtime.h  gamepak_runtime_plan.c  gamepak_runtime_plan.h  gpsp_profile.c  gpsp_profile.h  gt1151_protocol.c  gt1151_protocol.h  jit_platform.c  jit_platform.h  korvo1_lcd.c  korvo1_lcd.h  korvo1_pins.h  korvo1_scaler.c  korvo1_scaler.h  korvo1_sd.c  korvo1_sd.h  korvo1_touch.c  korvo1_touch.h  korvo1_usb_gamepad.c  korvo1_usb_gamepad.h  korvo1_usb_xinput.c  korvo1_usb_xinput.h  menu_ui.c  menu_ui.h  p_gba_map_replay.macro  pack_gba.py  partitions.csv  profile_serial.py  psram_fault_trace.c  psram_fault_trace.h  (+6 more)
esp32s31/main/: CMakeLists.txt  app_main.c  idf_component.yml
libretro/: libretro.c
riscv/: ESP32S31_P_GBA_START_FREEZE_REPORT.md  PLAN_ESP32S31.md  riscv_codegen.h  riscv_emit.h  riscv_runtime.c  riscv_runtime_test_shim.h
tests/dhrystone/: .gitignore  Makefile  crt0.S  dhry_result.h  dhrystone_arm.elf  dhrystone_arm.gba  dhrystone_arm.map  dhrystone_runner.c  dhrystone_thumb.elf  dhrystone_thumb.gba  dhrystone_thumb.map  gba.ld  gba_main.c  gba_port.c  jsjit_runner.js
tests/esp32s3/: Makefile  emit_block_stub  emit_block_stub.c  emit_block_stub_asan  emit_block_stub_dbg  emit_native_arm_block.c  qemu_capture_png.py  qemu_serial_debug.py  xtensa_codegen_tests.c
tests/esp32s3/idf-app/: CMakeLists.txt  flash_gba.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
tests/esp32s3/idf-app/main/: CMakeLists.txt  app_main.c
tests/esp32s31/: Makefile  board_driver_test.c
tests/headless/: .gitignore  Makefile  gpsp_headless.js  gpsp_headless_pre.js  headless_runner.c  verify_capture.js
tests/rv32im/: .gitignore  Makefile  backend_compare_frontend_shim.h  backend_compare_trace_run.sh  mips_backend_compare  rv32im_abi_stub.S  rv32im_abi_test.c  rv32im_armwrestler.c  rv32im_armwrestler_entry_perf_baseline  rv32im_armwrestler_entry_perf_baseline.txt  rv32im_armwrestler_entry_perf_optimized  rv32im_armwrestler_interp.cc  rv32im_armwrestler_perf_baseline  rv32im_armwrestler_perf_baseline.txt  rv32im_armwrestler_perf_check.awk  rv32im_armwrestler_perf_optimized  rv32im_armwrestler_state_contract  rv32im_armwrestler_state_helper_perf_baseline  rv32im_armwrestler_state_helper_perf_baseline.txt  rv32im_armwrestler_state_helper_perf_optimized  rv32im_armwrestler_store_perf_baseline  rv32im_armwrestler_store_perf_baseline.txt  rv32im_armwrestler_store_perf_optimized  rv32im_armwrestler_trace_run.sh  rv32im_armwrestler_validated_entry_perf_baseline  rv32im_armwrestler_validated_entry_perf_baseline.txt  rv32im_armwrestler_validated_entry_perf_optimized  rv32im_backend_compare  rv32im_backend_compare.c  rv32im_backend_compare_baseline.txt  rv32im_backend_compare_check.awk  rv32im_backend_compare_environment.txt  rv32im_backend_compare_lookup_baseline  rv32im_backend_compare_manifest.txt  rv32im_bios_jit_audit  rv32im_bios_swi_cases.h  rv32im_bios_swi_compare.awk  rv32im_bios_swi_interp  rv32im_bios_swi_jit  rv32im_codegen.S  (+34 more)
tests/rv32im/full_sysroot/sys/: mman.h
